--- a/Server/static/index.html
+++ b/Server/static/index.html
@@ -1,8 +1,4 @@
-<script src="/socket.io/socket.io.js"></script>
+<script src=""></script>
 <script>
-  var socket = io.connect('http://localhost:8080');
-  socket.on('news', function (data) {
-    console.log(data);
-    socket.emit('my other event', { my: 'data' });
-  });
+
 </script>
